fix: images size
but not responsive (mobile only)

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -583,6 +583,10 @@ video {
   height: 100%;
 }
 
+.h-\[6dvh\] {
+  height: 6dvh;
+}
+
 .w-\[50px\] {
   width: 50px;
 }
@@ -594,6 +598,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[12dvw\] {
+  width: 12dvw;
 }
 
 .grid-cols-2 {
@@ -643,11 +651,6 @@ video {
 .border-red {
   --tw-border-opacity: 1;
   border-color: rgb(255 0 0 / var(--tw-border-opacity, 1));
-}
-
-.bg-darkgray {
-  --tw-bg-opacity: 1;
-  background-color: rgb(105 106 104 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray {
